--- a/examples/ml/iris/iris.ipynb
+++ b/examples/ml/iris/iris.ipynb
@@ -1612,7 +1612,7 @@
     "    sk_model = base()\n",
     "    # train & save\n",
     "    sk_model.fit(x, y.ravel())\n",
-    "    with open(os.path.join(info.workplace, \"sk_model.pkl\"), \"wb\") as f:\n",
+    "    with open(os.path.join(info.workspace, \"sk_model.pkl\"), \"wb\") as f:\n",
     "        pickle.dump(sk_model, f)\n",
     "\n",
     "```\n",
